homework-4/redmine/deployment-adv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adv-web-deployment
spec:
  selector:
    matchLabels:
      app: adv-web
  replicas: 2
  template:
    metadata:
      labels:
        app: adv-web
    spec:
      containers:
      - name: adv-web
        image: adv4000/k8sphp:version1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: adv-web-svc
spec:
  selector:
    app: adv-web
  ports:
  - port: 80
    targetPort: 80
